lab1/Test/L1-A-10-10.output
Error Type A at Line 3
Error Type B at Line 11
Error Type B at Line 24
Error Type A at Line 34
Error Type A at Line 39
