lab1/Test/L1-A-10-10.cmm
int QbaPGt616s ( struct tSzdJtiDVXQGTF QOw1m , int 
  MWxGhRVsnq ) {
  float ^x9V5 [ 395378256 ] ;
}
struct {
}h2cM , Cr88TQzj 

;
struct XbexE9 ;
struct XC ;
< int ;
int ;
int ;
int jZkKZ4WLN1BKKF19amiS ( ) {
  if ( ibrVrrK5r )   if ( xQ9J7I ) {
    int YwoJfbqjKRew ;
    int OflGCRB2CNAK8aJKS ;
    int E2Y ;
    int _vWjsmqUrVqyYGZynnX ;
    int yGPq33rIrAsr0q ;
    struct jcKb0UHSH2ZCsRVCVf {
    }NjAXC0olyak16ZS3gsVV , cKX8E6R26sN3Rd0Pv3U = 
      xD98udhHVB2TTzi5 ;
>=   }else   nc1NN2HuWYlt01jY ;

else   if ( dFbH )   while ( Mh )   return BuhDobyhMSR 
    || T7eI2c0Rfa4cmmPrO && uBEAcQ5Z0v > u - - ! ApctQ5IfPcWIJpGot 
    [ vfXi5Mw2dLvAVYL = _3U8VwrTOMK4MvE + EdAGlWl / pU 
    ( Xo6s8iKIiyQ4ouIR || rD20e5d_fmU0 < HSy7Qs + ptPloFBF2No 
    * Y3s ( ud , DwO8mabfby5UUI9i5q5y <= zUlr + ( B8c4Mc5pQE9iYZ5UAz 
    && zNu7SATsIQTZyPptUB >= PQh2TnCzFqXBJvVg6C ) . zB3G88jMM 
    ) != 1902499258.708755537 + 1019726079 . GxxRuzjJCPp9Q 
    == fTIpU_kJeLgjWg4NSRv * qxjCjVMdr6ZpDIhnaV1L ( ) 
    ) ] . VYe5Eczaab2n ^;



}
&